--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,15 @@
     tools:context="edu.fullsail.mgems.cse.tic_tac_toe.MainActivity">
 
     <TextView
+        android:id="@+id/Start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Start"
+        android:textSize="30sp"
+        android:layout_marginBottom="92dp"
+        android:layout_above="@+id/cvptext"
+        android:layout_centerHorizontal="true" />
+    <TextView
         android:id="@+id/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +32,7 @@
         android:text="@string/PVP"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginTop="166dp"
+        android:layout_marginTop="202dp"
         android:layout_below="@+id/Title"
         android:layout_centerHorizontal="true" />
     <TextView
