--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Start"
-        android:textSize="30sp"
-        android:layout_marginBottom="92dp"
-        android:layout_above="@+id/cvptext"
-        android:layout_centerHorizontal="true" />
+        android:textSize="@dimen/menu_title"
+        android:layout_marginTop="46dp"
+        android:layout_below="@+id/Title"
+        android:layout_alignStart="@+id/difficulty" />
     <TextView
         android:id="@+id/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/GameName"
-        android:textSize="50sp"
+        android:textSize="@dimen/menu_title"
         android:textStyle="bold"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="38dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
     <TextView
@@ -30,17 +30,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/PVP"
-        android:textSize="20sp"
+        android:textSize="@dimen/menu_subtitle"
         android:textStyle="bold"
-        android:layout_marginTop="202dp"
-        android:layout_below="@+id/Title"
+        android:layout_marginTop="133dp"
+        android:layout_alignTop="@+id/Start"
         android:layout_centerHorizontal="true" />
     <TextView
         android:id="@+id/cvptext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/PVC"
-        android:textSize="20sp"
+        android:textSize="@dimen/menu_subtitle"
         android:textStyle="bold"
         android:layout_marginTop="17dp"
         android:layout_below="@+id/pvptext"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/CVC"
-        android:textSize="20sp"
+        android:textSize="@dimen/menu_subtitle"
         android:textStyle="bold"
         android:layout_marginTop="16dp"
         android:layout_below="@+id/cvptext"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/DEasy"
-        android:textSize="20sp"
+        android:textSize="@dimen/menu_subtitle"
         android:textStyle="bold"
         android:layout_marginTop="19dp"
         android:layout_below="@+id/cvctext"
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Credit"
-        android:textSize="20sp"
+        android:textSize="@dimen/menu_subtitle"
         android:textStyle="bold"
         android:layout_marginTop="18dp"
         android:layout_below="@+id/difficulty"
