--- a/app/src/main/res/layout/activity_winner_screen.xml
+++ b/app/src/main/res/layout/activity_winner_screen.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Draw"
-        android:textSize="50sp"
+        android:textSize="@dimen/menu_title"
         android:id="@+id/WhoWon"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
