--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Black"
-    tools:context="edu.fullsail.mgems.cse.tic_tac_toe.GameActivity"
-    >
+    android:orientation="vertical"
+    tools:context="edu.fullsail.mgems.cse.tic_tac_toe.GameActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="match_parent"
+        android:layout_weight=".3">
 
         <edu.fullsail.mgems.cse.tic_tac_toe.DrawSurface
             android:id="@+id/drawSurface1"
@@ -38,7 +37,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="match_parent"
+        android:layout_weight=".3">
 
         <edu.fullsail.mgems.cse.tic_tac_toe.DrawSurface
             android:id="@+id/drawSurface4"
@@ -61,9 +61,11 @@
             android:layout_margin="5dp"
             android:layout_weight=".3" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="match_parent"
+        android:layout_weight=".3">
 
         <edu.fullsail.mgems.cse.tic_tac_toe.DrawSurface
             android:id="@+id/drawSurface7"
